--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -26,7 +26,7 @@ Report an issue on <Link pure target="_blank" color href="https://github.com/zei
 </Tabs>
 
 This toolkit depends on `@zeit-ui/react`, learn more
-at <Link tarhet="_blank" pure color href="https://react.zeit-ui.co">document site</Link>.
+at <Link target="_blank" pure color href="https://react.zeit-ui.co">document site</Link>.
 
 **2. Import to app.jsx:**
 
