--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,38 +1,39 @@
 import Layout from 'lib/layout'
-import { Link, Tabs, Snippet, Spacer } from '@geist-ui/react'
+import { Link, Tabs, Snippet, Spacer } from '@geist-ui/core'
 
 export const meta = {
   title: 'home',
 }
 
-### About
+## About
 
 This is the code styles for `prism.js`, design style from Geist UI.
-Report an issue on <Link target="_blank" color href="https://github.com/geist-org/react-prism">Github</Link>.
+Report an issue on <Link target="_blank" color href="https://github.com/geist-org/prism">GitHub</Link>.
 
 <Spacer y={2} />
 
-#### Usage
+## Usage
 
-**1. Install:**
+Prism require on the latest version of the Geist UI, make sure you always have `@geist-ui/core` installed. When you [change the themes](https://geist-ui.dev/en-us/guide/themes) of the Geist, prism will automatically follow.
 
-<Tabs initialValue="Yarn" style={{ width: '450px' }}>
-  <Tabs.Item label="Yarn">
-    <Snippet text="yarn add @geist-ui/react @geist-ui/react-prism" />
-  </Tabs.Item>
-  <Tabs.Item label="NPM">
-    <Snippet text="npm install @geist-ui/react @geist-ui/react-prism" />
-  </Tabs.Item>
+### Install
+
+<Tabs initialValue="yarn" style={{ width: '450px' }}>
+  <Tabs.Tab label="Yarn" value="yarn">
+    <Snippet text="yarn add @geist-ui/core @geist-ui/prism" />
+  </Tabs.Tab>
+  <Tabs.Tab label="NPM" value="npm">
+    <Snippet text="npm install @geist-ui/core @geist-ui/prism" />
+  </Tabs.Tab>
 </Tabs>
 
-This toolkit depends on `@geist-ui/react`, learn more
-at <Link target="_blank" color href="https://react.geist-ui.dev">document site</Link>.
+<Spacer h={2} />
 
-**2. Import to app.jsx:**
+### Import to `app.jsx`
 
 ```jsx
-import { GeistProvider, CSSBaseline } from '@geist-ui/react'
-import { PrismBaseline } from '@geist-ui/react-prism'
+import { GeistProvider, CSSBaseline } from '@geist-ui/core'
+import { PrismBaseline } from '@geist-ui/prism'
 
 const app = () => (
   <GeistProvider>
@@ -45,14 +46,14 @@ const app = () => (
 
 <Spacer y={2} />
 
-#### Preview
+## Preview
 
 Here is the display effect of different code blocks:
 
 **`.jsx`**
 
 ```jsx
-import { Button } from '@geist-ui/react'
+import { Button } from '@geist-ui/core'
 
 const MyExampleComponent = () => {
   return <Button auto>Actions</Button>
@@ -119,7 +120,7 @@ export default after
 
 <Spacer y={3} />
 
-### License
+## License
 
 Licensed under the <Link target="_blank" href="https://github.com/geist-org/react-prism/blob/master/LICENSE">MIT LICENSE</Link>.
 
